internal/gatewayapi/testdata/tcproute-securitypolicy-with-authoriztion-client-cidr.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 3
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-2
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-tcp
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: foo
      port: 8088
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: All
      name: bar
      port: 8089
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: foo
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: bar
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-mixed
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: foo
      port: 8443
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: foo
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-gw-2
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-2
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-2
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /bar
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-3
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /test
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: hr-app-mixed
    namespace: default
  spec:
    parentRefs:
    - name: gateway-mixed
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-mixed
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
  envoy-gateway/gateway-2:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-2/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-2
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-2
      namespace: envoy-gateway-system
  envoy-gateway/gateway-mixed:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-mixed/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - address: null
        name: envoy-gateway/gateway-mixed/foo
        ports:
        - containerPort: 8443
          name: tcp-8443
          protocol: TCP
          servicePort: 8443
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-mixed
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-mixed
      namespace: envoy-gateway-system
  envoy-gateway/gateway-tcp:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-tcp/foo
        ports:
        - containerPort: 8088
          name: tcp-8088
          protocol: TCP
          servicePort: 8088
      - address: null
        name: envoy-gateway/gateway-tcp/bar
        ports:
        - containerPort: 8089
          name: tcp-8089
          protocol: TCP
          servicePort: 8089
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-tcp
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-tcp
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-http-route-1
    namespace: default
  spec:
    authorization:
      defaultAction: Allow
      rules:
      - action: Deny
        name: deny-location-1
        principal:
          clientCIDRs:
          - 192.168.1.0/24
          - 192.168.2.0/24
      - action: Deny
        name: deny-location-2
        principal:
          clientCIDRs:
          - 10.75.1.0/24
          - 10.75.2.0/24
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-http-route-3
    namespace: default
  spec:
    authorization:
      defaultAction: null
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-3
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-tcpr-app-bar
    namespace: default
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-private-vpc
        principal:
          clientCIDRs:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
    targetRef:
      group: gateway.networking.k8s.io
      kind: TCPRoute
      name: tcpr-app-bar
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: bar
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-tcpr-app-conflict
    namespace: default
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-private-vpc
        principal:
          clientCIDRs:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
    targetRef:
      group: gateway.networking.k8s.io
      kind: TCPRoute
      name: tcpr-app-bar
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: bar
      conditions:
      - lastTransitionTime: null
        message: Unable to target TCPRoute tcpr-app-bar, another SecurityPolicy has
          already attached to it
        reason: Conflicted
        status: "False"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-section-name
    namespace: envoy-gateway
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        principal:
          clientCIDRs:
          - 10.0.1.0/24
          - 10.0.2.0/24
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-2
      sectionName: http
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-gw-tcp-section-foo
    namespace: envoy-gateway
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-private-vpc
        principal:
          clientCIDRs:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-tcp
      sectionName: foo
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: foo
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-tcpr-app-invalid-section
    namespace: envoy-gateway
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-private-vpc
        principal:
          clientCIDRs:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-tcp
      sectionName: bogus
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: bogus
      conditions:
      - lastTransitionTime: null
        message: No section name bogus found for Gateway envoy-gateway/gateway-tcp
        reason: TargetNotFound
        status: "False"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-gateway
    namespace: envoy-gateway
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        principal:
          clientCIDRs:
          - 10.0.1.0/24
          - 10.0.2.0/24
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'This policy is being overridden by other securityPolicies for these
          routes: [default/httproute-1 default/httproute-3]'
        reason: Overridden
        status: "True"
        type: Overridden
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-gw-tcp-whole
    namespace: envoy-gateway
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-private-vpc
        principal:
          clientCIDRs:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-tcp
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'This policy is being overridden by other securityPolicies for these
          listeners: [foo] and these routes: [default/tcpr-app-bar]'
        reason: Overridden
        status: "True"
        type: Overridden
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: sp-mixed-gateway
    namespace: envoy-gateway
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        principal:
          clientCIDRs:
          - 10.0.0.0/24
    cors:
      allowMethods:
      - GET
      - POST
      allowOrigins:
      - https://example.com
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-mixed
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-mixed
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TCPRoute
  metadata:
    name: tcpr-app-foo
    namespace: default
  spec:
    parentRefs:
    - name: gateway-tcp
      namespace: envoy-gateway
      sectionName: foo
    rules:
    - backendRefs:
      - name: service-1
        port: 8163
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: foo
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TCPRoute
  metadata:
    name: tcpr-app-bar
    namespace: default
  spec:
    parentRefs:
    - name: gateway-tcp
      namespace: envoy-gateway
      sectionName: bar
    rules:
    - backendRefs:
      - name: service-1
        port: 8163
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: bar
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TCPRoute
  metadata:
    name: tcpr-app-mixed
    namespace: default
  spec:
    parentRefs:
    - name: gateway-mixed
      namespace: envoy-gateway
      sectionName: foo
    rules:
    - backendRefs:
      - name: service-1
        port: 8163
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-mixed
        namespace: envoy-gateway
        sectionName: foo
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      isHTTP2: false
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-3
            namespace: default
          name: httproute/default/httproute-3/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-3/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-3
          namespace: default
        name: httproute/default/httproute-3/rule/0/match/0/www_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /test
        security:
          authorization:
            defaultAction: Deny
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: default
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-1/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/www_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
        security:
          authorization:
            defaultAction: Allow
            rules:
            - action: Deny
              name: deny-location-1
              principal:
                clientCIDRs:
                - cidr: 192.168.1.0/24
                  distinct: false
                  ip: 192.168.1.0
                  isIPv6: false
                  maskLen: 24
                - cidr: 192.168.2.0/24
                  distinct: false
                  ip: 192.168.2.0
                  isIPv6: false
                  maskLen: 24
            - action: Deny
              name: deny-location-2
              principal:
                clientCIDRs:
                - cidr: 10.75.1.0/24
                  distinct: false
                  ip: 10.75.1.0
                  isIPv6: false
                  maskLen: 24
                - cidr: 10.75.2.0/24
                  distinct: false
                  ip: 10.75.2.0
                  isIPv6: false
                  maskLen: 24
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-2
            namespace: default
          name: httproute/default/httproute-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-2/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-2
          namespace: default
        name: httproute/default/httproute-2/rule/0/match/0/www_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /bar
        security:
          authorization:
            defaultAction: Deny
            rules:
            - action: Allow
              name: securitypolicy/envoy-gateway/policy-for-gateway/authorization/rule/0
              principal:
                clientCIDRs:
                - cidr: 10.0.1.0/24
                  distinct: false
                  ip: 10.0.1.0
                  isIPv6: false
                  maskLen: 24
                - cidr: 10.0.2.0/24
                  distinct: false
                  ip: 10.0.2.0
                  isIPv6: false
                  maskLen: 24
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
  envoy-gateway/gateway-2:
    accessLog:
      json:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      isHTTP2: false
      metadata:
        kind: Gateway
        name: gateway-2
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-2/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-gw-2
            namespace: default
          name: httproute/default/httproute-gw-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-gw-2/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-gw-2
          namespace: default
        name: httproute/default/httproute-gw-2/rule/0/match/0/www_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
        security:
          authorization:
            defaultAction: Deny
            rules:
            - action: Allow
              name: securitypolicy/envoy-gateway/policy-for-section-name/authorization/rule/0
              principal:
                clientCIDRs:
                - cidr: 10.0.1.0/24
                  distinct: false
                  ip: 10.0.1.0
                  isIPv6: false
                  maskLen: 24
                - cidr: 10.0.2.0/24
                  distinct: false
                  ip: 10.0.2.0
                  isIPv6: false
                  maskLen: 24
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
  envoy-gateway/gateway-mixed:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-mixed
        settings:
        - metadata:
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-mixed
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      isHTTP2: false
      metadata:
        kind: Gateway
        name: gateway-mixed
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-mixed/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: hr-app-mixed
            namespace: default
          name: httproute/default/hr-app-mixed/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/hr-app-mixed/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: hr-app-mixed
          namespace: default
        name: httproute/default/hr-app-mixed/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        security:
          authorization:
            defaultAction: Deny
            rules:
            - action: Allow
              name: securitypolicy/envoy-gateway/sp-mixed-gateway/authorization/rule/0
              principal:
                clientCIDRs:
                - cidr: 10.0.0.0/24
                  distinct: false
                  ip: 10.0.0.0
                  isIPv6: false
                  maskLen: 24
          cors:
            allowMethods:
            - GET
            - POST
            allowOrigins:
            - distinct: false
              exact: https://example.com
              name: ""
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 8443
      metadata:
        kind: Gateway
        name: gateway-mixed
        namespace: envoy-gateway
        sectionName: foo
      name: envoy-gateway/gateway-mixed/foo
      port: 8443
      routes:
      - authorization:
          defaultAction: Deny
          rules:
          - action: Allow
            name: securitypolicy/envoy-gateway/sp-mixed-gateway/authorization/rule/0
            principal:
              clientCIDRs:
              - cidr: 10.0.0.0/24
                distinct: false
                ip: 10.0.0.0
                isIPv6: false
                maskLen: 24
        destination:
          metadata:
            kind: TCPRoute
            name: tcpr-app-mixed
            namespace: default
          name: tcproute/default/tcpr-app-mixed/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8163
            metadata:
              name: service-1
              namespace: default
              sectionName: "8163"
            name: tcproute/default/tcpr-app-mixed/rule/-1/backend/0
            protocol: TCP
            weight: 1
        name: tcproute/default/tcpr-app-mixed
  envoy-gateway/gateway-tcp:
    accessLog:
      json:
      - path: /dev/stdout
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 8088
      metadata:
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: foo
      name: envoy-gateway/gateway-tcp/foo
      port: 8088
      routes:
      - authorization:
          defaultAction: Deny
          rules:
          - action: Allow
            name: allow-private-vpc
            principal:
              clientCIDRs:
              - cidr: 10.0.0.0/8
                distinct: false
                ip: 10.0.0.0
                isIPv6: false
                maskLen: 8
              - cidr: 172.16.0.0/12
                distinct: false
                ip: 172.16.0.0
                isIPv6: false
                maskLen: 12
              - cidr: 192.168.0.0/16
                distinct: false
                ip: 192.168.0.0
                isIPv6: false
                maskLen: 16
        destination:
          metadata:
            kind: TCPRoute
            name: tcpr-app-foo
            namespace: default
          name: tcproute/default/tcpr-app-foo/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8163
            metadata:
              name: service-1
              namespace: default
              sectionName: "8163"
            name: tcproute/default/tcpr-app-foo/rule/-1/backend/0
            protocol: TCP
            weight: 1
        name: tcproute/default/tcpr-app-foo
    - address: 0.0.0.0
      externalPort: 8089
      metadata:
        kind: Gateway
        name: gateway-tcp
        namespace: envoy-gateway
        sectionName: bar
      name: envoy-gateway/gateway-tcp/bar
      port: 8089
      routes:
      - authorization:
          defaultAction: Deny
          rules:
          - action: Allow
            name: allow-private-vpc
            principal:
              clientCIDRs:
              - cidr: 10.0.0.0/8
                distinct: false
                ip: 10.0.0.0
                isIPv6: false
                maskLen: 8
              - cidr: 172.16.0.0/12
                distinct: false
                ip: 172.16.0.0
                isIPv6: false
                maskLen: 12
              - cidr: 192.168.0.0/16
                distinct: false
                ip: 192.168.0.0
                isIPv6: false
                maskLen: 16
        destination:
          metadata:
            kind: TCPRoute
            name: tcpr-app-bar
            namespace: default
          name: tcproute/default/tcpr-app-bar/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8163
            metadata:
              name: service-1
              namespace: default
              sectionName: "8163"
            name: tcproute/default/tcpr-app-bar/rule/-1/backend/0
            protocol: TCP
            weight: 1
        name: tcproute/default/tcpr-app-bar
